--- a/com.rhinox.vhacd/Runtime/com.rhinox.vhacd.asmdef
+++ b/com.rhinox.vhacd/Runtime/com.rhinox.vhacd.asmdef
@@ -1,8 +1,7 @@
 {
     "name": "vhacd",
+    "rootNamespace": "",
     "references": [
-        "GUID:3b169ccda512e504b9e2eb8b0bec14f9",
-        "GUID:62a965aa53b0d0e4a9715c9a86d7fd31",
         "GUID:fc025ba4ac3997440926e87ec084af89"
     ],
     "includePlatforms": [],
