--- a/com.rhinox.vhacd/package.json
+++ b/com.rhinox.vhacd/package.json
@@ -6,6 +6,6 @@
   "unity": "2020.3",
   "author": "Rhinox",
   "dependencies": {
-		"com.rhinox.open.guiutils": "1.5.1"
+		"com.rhinox.open.lightspeed": "1.6.4"
   }
 }
