--- a/com.rhinox.open.vhacd/Runtime/com.rhinox.vhacd.asmdef
+++ b/com.rhinox.open.vhacd/Runtime/com.rhinox.vhacd.asmdef
@@ -2,7 +2,9 @@
     "name": "vhacd",
     "rootNamespace": "",
     "references": [
-        "GUID:fc025ba4ac3997440926e87ec084af89"
+        "GUID:fc025ba4ac3997440926e87ec084af89",
+        "GUID:3b169ccda512e504b9e2eb8b0bec14f9",
+        "GUID:62a965aa53b0d0e4a9715c9a86d7fd31"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
